fix(m19): preserve structured redaction attribute order